Fixing spacing on nav spinners, text, some top padding. attempt to fix scrollbars, fix button width, fix some nav + big scrollbar changes

--- a/packages/tapisui-common/src/ui/PageLayout/PageLayout.module.scss
+++ b/packages/tapisui-common/src/ui/PageLayout/PageLayout.module.scss
@@ -14,6 +14,7 @@
 
 .right {
   width: 100%;
+  min-width: 0;
   flex-grow: 1;
   overflow: auto;
 }
@@ -21,7 +22,9 @@
 .main {
   width: 100%;
   flex: 1;
-  overflow-y: auto;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
 .layout-root {
@@ -33,9 +36,9 @@
 .layout-row {
   display: flex;
   flex-direction: row;
-  flex-grow: 1;
-  overflow: auto;
-  min-height: 100%;
+  flex: 1;
+  overflow: hidden;
+  min-height: 0;
 }
 
 .constrain {
